"""Domain models for hiring experiment execution."""

from __future__ import annotations

import hashlib
import json
from dataclasses import dataclass, field
from pathlib import Path
from typing import Literal, TypeAlias

from llm_auditkit.inference import InferenceConfig

from .exceptions import ExperimentIdentityError


ExperimentExecutionMode: TypeAlias = Literal["sync", "async"]


@dataclass(slots=True)
class Persona:
    """Stable persona definition rendered for each experiment scenario."""

    id: str
    name: str
    trait_template: str
    instruction: str


@dataclass(slots=True)
class ExperimentDatasetSchema:
    """Map semantic experiment inputs to DataFrame columns."""

    job_posting_column: str
    resume_columns: list[str]
    context_columns: dict[str, str] = field(default_factory=dict)


@dataclass(slots=True)
class ExperimentConfig:
    """Configuration for one logical hiring experiment."""

    experiment_id: str
    dataset_schema: ExperimentDatasetSchema
    prompt_template: str
    personas: list[Persona]
    inference: InferenceConfig
    save_after_each_batch: bool = True


@dataclass(slots=True)
class ExperimentRunConfig:
    """YAML-backed operational configuration for one executable experiment run."""

    dataset_path: Path
    output_path: Path
    mode: ExperimentExecutionMode
    experiment_config: ExperimentConfig


@dataclass(frozen=True, slots=True)
class ExperimentJobKey:
    """Durable identity for one scenario, persona, and model combination."""

    experiment_id: str
    scenario_id: str
    persona_id: str
    model_config_id: str


@dataclass(slots=True)
class ExperimentOutcome:
    """Successfully parsed applicant decisions and their token log probabilities."""

    picks: list[int]
    logprobs: list[float]
    generated_response: str
    comment: str | None


@dataclass(slots=True)
class ExperimentOutputRecord:
    """One normalized successful or failed experiment job outcome."""

    key: ExperimentJobKey
    request_id: str
    persona_name: str
    model: str
    provider: str
    persona_instruction: str
    user_prompt: str | None
    system_prompt: str | None
    outcome: ExperimentOutcome | None = None
    error_type: str | None = None
    error_message: str | None = None

    @property
    def is_successful(self) -> bool:
        """Whether the record contains a complete parsed outcome."""

        return (
            self.outcome is not None
            and self.error_type is None
            and self.error_message is None
        )


def build_experiment_request_id(key: ExperimentJobKey) -> str:
    """Derive a deterministic collision-resistant request ID from a job key."""

    if not isinstance(key, ExperimentJobKey):
        raise ExperimentIdentityError("key must be an ExperimentJobKey")

    values = (
        key.experiment_id,
        key.scenario_id,
        key.persona_id,
        key.model_config_id,
    )
    if any(not isinstance(value, str) or not value.strip() for value in values):
        raise ExperimentIdentityError(
            "experiment job key fields must be non-empty strings"
        )

    canonical_key = json.dumps(
        values,
        ensure_ascii=False,
        separators=(",", ":"),
    ).encode("utf-8")
    digest = hashlib.sha256(canonical_key).hexdigest()
    return f"experiment-request:{digest}"
