---
config:
  theme: mc
---
classDiagram
    class ExperimentRunConfig {
        <<YAML-backed>>
        +dataset_path: Path
        +output_path: Path
        +mode: sync | async
        +experiment_config: ExperimentConfig
    }
    class ExperimentConfig {
        +experiment_id: str
        +dataset_schema: ExperimentDatasetSchema
        +prompt_template: str
        +personas: List~Persona~
        +inference: InferenceConfig
        +save_after_each_batch: bool
    }
    class ExperimentDatasetSchema {
        +job_posting_column: str
        +resume_columns: List~str~
        +context_columns: Dict~str, str~
    }
    class Persona {
        +id: str
        +name: str
        +trait_template: str
        +instruction: str
    }
    class PersonaTraitRenderer {
        <<internal>>
        +render(row: Mapping, schema: ExperimentDatasetSchema, persona: Persona) str
    }
    class QuestionPromptRenderer {
        <<internal>>
        +render(row: Mapping, schema: ExperimentDatasetSchema, template: str) str
    }
    class InferenceConfig {
        <<shared inference>>
        +batch_size: int
    }
    class InferenceRequest {
        <<shared inference>>
    }
    class InferenceBatchPreview {
        <<shared inference>>
    }
    class InferenceBatchResult {
        <<shared inference>>
    }
    class InferenceResult {
        <<shared inference>>
    }
    class InferenceOrchestrator {
        <<shared inference>>
    }
    class ExperimentJobKey {
        +experiment_id: str
        +scenario_id: str
        +persona_id: str
        +model_config_id: str
    }
    class ScenarioIdentity {
        <<internal>>
        +derive(source_row: Mapping) str
    }
    class ExperimentOutcome {
        +picks: List~int~
        +logprobs: List~float~
        +generated_response: str
        +comment: Optional~str~
    }
    class ExperimentOutputRecord {
        +key: ExperimentJobKey
        +request_id: str
        +persona_name: str
        +model: str
        +provider: str
        +persona_instruction: str
        +user_prompt: Optional~str~
        +system_prompt: Optional~str~
        +outcome: Optional~ExperimentOutcome~
        +error_type: Optional~str~
        +error_message: Optional~str~
    }
    class ExperimentRunner {
        -inference_orchestrator: InferenceOrchestrator
        -result_store: ExperimentResultStore
        +preview(dataset: DataFrame, config: ExperimentConfig, batch_number: int) InferenceBatchPreview
        +run(dataset: DataFrame, config: ExperimentConfig) DataFrame
        +run_async(dataset: DataFrame, config: ExperimentConfig) DataFrame
        -prepare_run(dataset: DataFrame, config: ExperimentConfig) Tuple
        -process_batch(output_dataset: DataFrame, dataset: DataFrame, config: ExperimentConfig, batch: InferenceBatchResult) DataFrame
    }
    class ExperimentResultStore {
        -output_path: Path
        +initialize(dataset: DataFrame, config: ExperimentConfig) DataFrame
        +apply_batch(output_dataset: DataFrame, dataset: DataFrame, config: ExperimentConfig, records: List~ExperimentOutputRecord~) DataFrame
        +save(output_dataset: DataFrame) void
        +save_batch(output_dataset: DataFrame, dataset: DataFrame, config: ExperimentConfig, records: List~ExperimentOutputRecord~) DataFrame
        +completed_keys(output_dataset: DataFrame, dataset: DataFrame, config: ExperimentConfig) Set~ExperimentJobKey~
        +is_complete(output_dataset: DataFrame, key: ExperimentJobKey, config: ExperimentConfig) bool
    }
    class DataFrame {
        <<pandas>>
    }
    class ExperimentCommand {
        +main(config_path: Path) int
    }
    class ExperimentOutputCSV {
        <<implemented checkpoint>>
        +row_grain: ExperimentJobKey
        +experiment_id: str
        +scenario_id: str
        +persona_id: str
        +model_config_id: str
        +request_id: str
        +pick1 through pickN
        +logprob1 through logprobN
        +error fields
    }
    class RegressionPreparationInput {
        <<required downstream CSV>>
        +result_status: str
        +candidate_count: int
        +durable candidate IDs
        +candidate_i_pick and probability
        +configured scalar covariates
    }
    note for RegressionPreparationInput "Researcher supplies one audit scope; this is not a CSV column."
    class RegressionDataPreparation {
        <<R>>
        +role: downstream_preparation_consumer
    }
    ExperimentRunConfig --> ExperimentConfig
    ExperimentCommand --> ExperimentRunConfig : loads YAML
    ExperimentCommand --> DataFrame : loads CSV once
    ExperimentCommand --> ExperimentRunner : selects sync or async
    ExperimentCommand --> ExperimentResultStore : supplies output path
    ExperimentConfig --> Persona
    ExperimentConfig --> ExperimentDatasetSchema
    ExperimentConfig --> InferenceConfig
    ExperimentRunner --> ExperimentConfig
    ExperimentRunner --> ScenarioIdentity : derives or preserves
    ExperimentRunner --> ExperimentJobKey : derives request identity
    ExperimentRunner --> QuestionPromptRenderer : renders each scenario
    ExperimentRunner --> PersonaTraitRenderer : renders each scenario
    ExperimentRunner --> InferenceRequest : builds pending requests
    ExperimentRunner --> InferenceBatchPreview : previews
    ExperimentRunner --> InferenceOrchestrator : consumes batches
    InferenceOrchestrator --> InferenceBatchResult : yields sequentially
    InferenceBatchResult --> InferenceResult
    ExperimentRunner --> ExperimentOutcome : parses
    ExperimentRunner --> ExperimentOutputRecord : builds
    ExperimentRunner --> ExperimentResultStore : checkpoints completed batches
    ExperimentRunner --> DataFrame : processes
    ExperimentResultStore --> ScenarioIdentity : validates checkpoints against
    ExperimentResultStore --> ExperimentJobKey : indexes by
    ExperimentResultStore --> ExperimentOutputRecord : stores
    ExperimentResultStore --> DataFrame : updates and persists
    ExperimentResultStore --> ExperimentOutputCSV : writes atomically
    ExperimentOutputCSV ..> RegressionPreparationInput : production mapping unresolved
    RegressionPreparationInput ..> RegressionDataPreparation : consumes
